# spira

./: ARCHITECTURE.md  GETTING_STARTED.md  LICENSE  NEW_STRUCTURE.md  README.md  demo_app.py  pyproject.toml
docs/: API.md  SETUP.md
examples/: build_kb.py  config.yaml  local-config.yaml  query_example.py
src/: spira_cli.py
src/spira/: __init__.py  cli.py  config.py  notebook_parser.py  opensearch_client.py  sql_analyzer.py  streamlit_app.py
src/spira_app/: __init__.py  app.py  cli.py
src/spira_backend/: __init__.py  embeddings.py  glue_catalog.py  knowledge_base.py  query_engine.py
tests/: __init__.py  test_config.py  test_notebook_parser.py  test_sql_analyzer.py
